<?xml version="1.0" ?>
<package format="2">
  <name>arm_control</name>
  <version>0.0.1</version>
  <description>The arm_control package</description>

  <license>MIT</license>

  <maintainer email="rohan989yuttham@gmail.com">Rohan Yuttham</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>effort_controllers</exec_depend>

</package>
